<resources>
    <string name="dist_travelled">Distance Travelled : </string>
    <string name="red_des">Last Location</string>
    <string name="idle_flag">Idle Location</string>
     <string name="notresponding">Not Responding</string>
    <string name="start_flag">Start &amp; End Location</string>
    <string name="green_des">Current Location</string>
    <string name="pink_des">Over Speed</string>
    <string name="vehicle_reg_num">Vehicle Reg.No : </string>
    <string name="vehicle_owner">Driver Name  : </string>
    <string name="login">LOG IN</string>
    <string name="reset">Reset</string>
    <string name="app_name">DeemsysGPS</string>
    <string name="action_settings">Settings</string>
    <string name="release">OK</string>
    <string name="Username">Username</string>
    <string name="pswd">Password</string>
    <string name="signin">Login</string>
    <string name="welcome">Welcome     </string>
    <string name="aboutus">About us</string>
    <string name="profile">Profile</string>
    <string name="contactus">Contact us</string>
    <string name="callus">Call us</string>
    <string name="feedbak">FeedBack</string>
    <string name="signout">Logout</string>
    <string name="ariel">Ariel</string>
    <string name="satellite">Satellite</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="orgname">Organization Name</string>
    <string name="mobnumb">Mobile Number</string>
    <string name="addrs">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="info">INFO!</string>
    <string name="savemessage">Send Message</string>
    <string name="savesettings">Save Settings</string>
    <string name="clearmessage">Clear Message</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="login_signuptext">Enter your username and password to login</string>
    <string-array name="nav_drawer_items">
        <item>Live Track</item>
        <item>Tracking History</item>
        <item>Alert Message</item>
        <item>Dashboard</item>
    </string-array>
    <string-array name="nav_drawer_items1">
        <item>Tracking History</item>
        <item>Live Track</item>
        <item>Alert Message</item>
        <item>Dashboard</item>
    </string-array>
    <string-array name="nav_drawer_items2">
        <item>Alert Message</item>
        <item>Live Track</item>
        <item>Tracking History</item>
        <item>Dashboard</item>
    </string-array>
    <string-array name="nav_drawer_items_withoutalert">
        <item>Live Track</item>
        <item>Tracking History</item>
        <item>Theft Alarm</item>
        <item>Over Speed</item>
        <item>Dashboard</item>
    </string-array>
    <string-array name="nav_drawer_items1_withoutalert">
        <item>Tracking History</item>
        <item>Live Track</item>
        <item>Theft Alarm</item>
        <item>Over Speed</item>
        <item>Dashboard</item>
    </string-array>
    <string-array name="nav_drawer_items2_withoutalert">
        <item>Theft Alarm</item>
        <item>Live Track</item>
        <item>Tracking History</item>
        <item>Over Speed</item>
        <item>Dashboard</item>
    </string-array>
    <string-array name="nav_drawer_items3_withoutalert">
        <item>Over Speed</item>
        <item>Live Track</item>
        <item>Tracking History</item>
        <item>Theft Alarm</item>
        <item>Dashboard</item>
    </string-array>
    <string name="alarmtype">Alarm type</string>
    <string name="synciming">Select Synchronization timing</string>
    <string name="aboutusdeem">About Deemsys</string>
    <string name="vehicleno">Vehicle No</string>
    <string name="lastupdate">Last Updated</string>
    <string name="curloc">Current Location</string>
    <string name="curspeed">Current Speed(km/hr)</string>
    <string name="aboutusfirst">Deemsys offers the best-in-class Application maintenance solutions that relieve the companies from the cumbersome and tedious task of managing their technology landscape. </string>
    <string name="aboutusfirst1">Our team with wide range of experience is capable of understanding complex applications to identify issues and design the right fixes. Their speedy identification of issues and resolution reduces turnaround time.</string>
    <string name="corpweb">Corporate Website:</string>
    <string name="corpweblink">www.deemsysinc.com</string>
    <string name="deemgpsapp">About DeemGPS APP</string>
    <string name="deemgpsapp1">DeemGPS tracking systems offer the best way for schools, colleges and other businesses to have real-time information about the location and use of their vehicles and other assets. </string>
    <string name="deemgpsapp2">Using DeemGPS, schools, colleges and businesses can save money on fuel, cell-phone bills and other operational costs, increase productivity, and prevent loss or theft of vehicles and precious assets.</string>
    <string name="deemgpsapp3">DeemGPS Website:</string>
    <string name="weblink">www.mygps.technology</string>
    <string name="oudevice">Our Devices</string>
    <string name="ourdevice1">DGPS507B &amp; DGPS504 Vehicle Tracker</string>
    <string name="ourdevice2">DGPS502 Personal Tracker</string>
    <string name="ourdevice3">DGPS501 Watch Tracker</string>
    <string name="emailrajan">rajan@deemsysinc.com</string>
    <string name="emailsales">sales@deemsysinc.com</string>
    <string name="emailabout">Email:</string>
    <string name="websit">Website :</string>
    <string name="version">Application Version: 1.0</string>
    <string name="helpsup">Help/Support: </string>
    <string name="emailidd">support@deemsysinc.com</string>
    <string name="addressdeem">Plot No-21,</string>
    <string name="usdeem">800 Cross Pointe road</string>
    <string name="devby">Designed &amp; Developed by</string>
    <string name="deemname">Deemsys Inc</string>
    <string name="copyright">Copyrights 2014 Deemsysinc.com</string>
    <string name="addrs2">Kailash Nagar 1st street,</string>
    <string name="addrs3">Perumbakkam,</string>
    <string name="addrs4">Tel: +91-9841122989</string>
    <string name="addrs1">152/33 Manoharan Flats,</string>
    <string name="addrs5">Chennai-600100.</string>
    <string name="addrs51">Chennai-600100,</string>
    <string name="addrs6">India.</string>
    <string name="deemus">OH 43230</string>
    <string name="deemus0">Tel: 614-322-9928</string>
    <string name="deemus1">Fax: 614-322-9945</string>
    <string name="deemus5">Suite A Gahanna,</string>
    <string name="deemsysaddresss">Offshore Office</string>
    <string name="headoffice">Head Office</string>
    <string name="deemgpsreturn">DeemGPS Return Policy</string>
    <string name="deemgpsreturnstate">You will need a Return Authorization (RA) number prior to shipping your product to DeemGPS for repair. Please contact our technical support group by calling or emailing us.</string>
    <string name="deemgpsrefund">DeemGPS Refund Policy</string>
    <string name="deemgpsrefundstate">The DeemGPS Return/Refund Policy only applies to hardware and software goods purchased from the DeemGPS website or a telephone order.In order to return an item for refund you will need a Return Authorization. Please contact DeemGPS by phone or email to obtain a Return Authorization.</string>
    <string name="deemgpsrefundstate1">We accept returns of devices and accessories within 7 days of purchase.</string>
    <string name="deemgpswaranty">DeemGPS Warranty &amp; Replacement Policy</string>
    <string name="warantyrepair">In-Warranty Repairs</string>
    <string name="warantyrepair1">All DeemGPS products are warranted to be free from defects in materials or workmanship for:</string>
    <string name="warantyrepair2">● 1 month from the date of purchase for new GPS receivers</string>
    <string name="warantyrepair3">● 1 month  from the date of purchase for reconditioned GPS receivers</string>
    <string name="warantyrepair4">● The greater of 1 month or the remainder of the original warranty for GPS receivers exchanged by DeemGPS as part of in-warranty servicing.</string>
    <string name="proofofpurchase">In-Warranty Services Require a Valid Proof-of Purchase</string>
    <string name="proofofpurchase1">If returned within the applicable warranty period, DeemGPS will, at its sole discretion and at no cost to the customer, replace the defective GPS receiver with a reconditioned unit of the same model, as available. If the same model is not available, a different reconditioned model GPS receiver will be used for the exchange.
This warranty does not cover failures due to abuse, misuse, accident or unauthorized alterations or repairs.</string>
    <string name="outofwaranty">Out of Warranty Repairs</string>
    <string name="outofwaranty1">DeemGPS does not service products. For receivers returned after the warranty period or for damage not covered by the warranty, customers may purchase a new unit at a reduced cost or reconditioned unit also at a reduced cost.</string>
    <string name="brokerndisplay">Broken Displays</string>
    <string name="brokerndisplay1">DeemGPS will replace receivers with a broken display returned within the warranty period with a reconditioned unit of the same or comparable model at a reduced cost to customer. Customers with a broken display unit returned outside the warranty period will be given the opportunity to purchase a new unit at a reduced cost or reconditioned unit also at a reduced cost.</string>
    <string name="productreturnship">Product Return Shipping Instructions</string>
    <string name="productreturnship1">You will need a Return Authorization (RA) number prior to shipping your product to DeemGPS for repair. Please contact our technical support group at the phone numbers listed above. Any package that is sent into our repair facilities without an RA number will be rejected and sent back at the owner\'s expense and will be assessed a INR 500.00 service charge fee prior to returning the item. </string>
    <string name="shipinstruc">Shipping Instructions</string>
    <string name="shipinstruc1">After obtaining your Return Authorization number from Deemsys Inc we strongly suggest you ship your product back to our service center via a trackable shipping method, and clearly write your Return Authorization number on the 2nd line of the address label as well as on three sides of the box you are shipping your product back in. Please note that the Repair Authorization number is only valid for 30 Days. </string>
    <string name="deemsysindianaddrs">DEEMSYS INDIAN ADDRESS</string>
    <string name="note">Note: We strongly recommend shipping your product using a reliable and trackable shipping method . This will help keep track of your product as it\'s delivered, and signed for at our facility. Please insure the package at cost value as Deemsys Inc is not responsible for lost or damaged product during transit.</string>
    <string name="warantydisclaimer">DeemGPS will, at its sole discretion and at no cost to the customer replace the defective GPS receiver with a reconditioned unit of the same model, as available. If the same model is not available, a comparable model GPS receiver will be used for the exchange. </string>
    <string name="warantydisclaimer1">The warranty does not cover failures due to abuse, misuse, accident, unauthorized alterations and/or repairs. </string>
    <string name="warantydisclaimer2">Customer(s) can expect to receive their replacement product back within 7-10 days after the returned product has been received at our Service Center.</string>
    <string name="warantydisclaimera">Warranty Disclaimer</string>
    <string name="warantydisclaimerturn">Expected Turn Around Time</string>
</resources>