<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical"
    android:background="@drawable/termsandconditionnormal" >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="439dp"
      android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_marginTop="115dp"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/deemsysreturn"
                style="@style/custom"
                android:layout_width="540dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="1dp"
                android:text="@string/deemgpsreturn" />

            <TextView
                android:id="@+id/deemsysreturnstatement"
                style="@style/custom"
                android:layout_width="480dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="false"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="29dp"
                android:text="@string/deemgpsreturnstate" />

            <TextView
                android:id="@+id/refundpolicy"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="false"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="110dp"
                android:text="@string/deemgpsrefund" />

            <TextView
                android:id="@+id/refundstatement"
                style="@style/custom"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="135dp"
                android:text="@string/deemgpsrefundstate" />

            <TextView
                android:id="@+id/refundstate1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="260dp"
                android:text="@string/deemgpsrefundstate1" />

            <TextView
                android:id="@+id/deemgpswaranty"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="305dp"
                android:text="@string/deemgpswaranty" />

            <TextView
                android:id="@+id/warantyrepair"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="330dp"
                android:text="@string/warantyrepair" />

            <TextView
                android:id="@+id/warantyrepair1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="355dp"
                android:text="@string/warantyrepair1" />

            <TextView
                android:id="@+id/warantyrepair2"
                style="@style/custom"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="400dp"
                android:text="@string/warantyrepair2" />

            <TextView
                android:id="@+id/warantyrepair3"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="440dp"
                android:text="@string/warantyrepair3" />

            <TextView
                android:id="@+id/warantyrepair4"
                style="@style/custom"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="480dp"
                android:text="@string/warantyrepair4" />

            <TextView
                android:id="@+id/proofofpurchase"
                style="@style/custom"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="560dp"
                android:text="@string/proofofpurchase" />

            <TextView
                android:id="@+id/proofofpurchase1"
                style="@style/custom"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="605dp"
                android:text="@string/proofofpurchase1" />
            
            <TextView
                android:id="@+id/outofwaranty"
                style="@style/custom"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="780dp"
                android:text="@string/outofwaranty" />

            <TextView
                android:id="@+id/outofwaranty1"
                style="@style/custom"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="810dp"
                android:text="@string/outofwaranty1" />

            <TextView
                android:id="@+id/brokerndisplay"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="920dp"
                android:text="@string/brokerndisplay" />

  <TextView
      android:id="@+id/brokerndisplay1"
      style="@style/custom"
      android:layout_width="260dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="30dp"
      android:layout_marginTop="950dp"
      android:text="@string/brokerndisplay1" />
            
              <TextView
                  android:id="@+id/productreturnship"
                  style="@style/custom"
                  android:layout_width="250dp"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="30dp"
                  android:layout_marginTop="1110dp"
                  android:text="@string/productreturnship" />
              
              <TextView
                  android:id="@+id/productreturnship1"
                  style="@style/custom"
                  android:layout_width="260dp"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="30dp"
                  android:layout_marginTop="1140dp"
                  android:text="@string/productreturnship1" />

              <TextView
                  android:id="@+id/shipinstruc"
                  style="@style/custom"
                  android:layout_width="250dp"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="30dp"
                  android:layout_marginTop="1320dp"
                  android:text="@string/shipinstruc" />
              
                <TextView
                    android:id="@+id/shipinstruc1"
                    style="@style/custom"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="1350dp"
                    android:text="@string/shipinstruc1" />
              
              <TextView
                  android:id="@+id/deemsysindianaddrs"
                  style="@style/custom"
                  android:layout_width="250dp"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="30dp"
                  android:layout_marginTop="1530dp"
                  android:text="@string/deemsysindianaddrs" />

             <TextView
                 android:id="@+id/addrsone"
                 style="@style/custom"
                 android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="1560dp"
                 android:text="@string/addressdeem" />

            <TextView
                android:id="@+id/addrsone0"
                style="@style/custom"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="1580dp"
                android:text="@string/addrs1" />

            <TextView
                android:id="@+id/addrsone1"
                style="@style/custom"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="1600dp"
                android:text="@string/addrs2" />

            <TextView
                android:id="@+id/addrsone2"
                style="@style/custom"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="1620dp"
                android:text="@string/addrs3" />
            
            <TextView
                android:id="@+id/addrsone2t"
                style="@style/custom"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="1640dp"
                android:text="@string/addrs51" />
            <TextView
                android:id="@+id/addrsone2t"
                style="@style/custom"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="1660dp"
                android:text="@string/addrs6" />

            <TextView
                android:id="@+id/addrsone3"
                style="@style/custom"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="1680dp"
                android:text="@string/addrs4" />

              <TextView
                  android:id="@+id/note"
                  style="@style/custom"
                  android:layout_width="250dp"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="30dp"
                  android:layout_marginTop="1715dp"
                  android:text="@string/note" />
                <TextView
                  android:id="@+id/warantydisclaimera"
                  style="@style/custom"
                  android:layout_width="260dp"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="30dp"
                  android:layout_marginTop="1860dp"
                  android:text="@string/warantydisclaimera" />

              <TextView
                  android:id="@+id/warantydisclaimer"
                  style="@style/custom"
                  android:layout_width="260dp"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="30dp"
                  android:layout_marginTop="1890dp"
                  android:text="@string/warantydisclaimer" />

<TextView
    android:id="@+id/warantydisclaimerturn"
    style="@style/custom"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="2060dp"
    android:text="@string/warantydisclaimerturn" />

              <TextView
                  android:id="@+id/warantydisclaimer1"
                  style="@style/custom"
                  android:layout_width="250dp"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="30dp"
                  android:layout_marginTop="2000dp"
                  android:text="@string/warantydisclaimer1" />

           <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="2150dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    style="@style/custom"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="120dp"
                    android:cropToPadding="false"
                    android:src="@drawable/deemgpslogoo" />

                <TextView
                    android:id="@+id/TextView01"
                    style="@style/custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="70dp"
                    android:text="@string/copyright" />

            </RelativeLayout>

            <TextView
                android:id="@+id/warantydisclaimer2"
                style="@style/custom"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="false"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="2090dp"
                android:text="@string/warantydisclaimer2" />

        </RelativeLayout>
      
    </ScrollView>
    </LinearLayout>

</RelativeLayout>