<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.deemsys.lmsmooc.MainActivity" >

    <item
        android:id="@+id/navd"
        android:icon="@drawable/overflow"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/profile"
                android:showAsAction="never"
                android:title="@string/profile"/>
            <item
                android:id="@+id/aboutus"
                android:showAsAction="never"
                android:title="@string/aboutus"/>
            <item
                android:id="@+id/contactus"
                android:orderInCategory="0"
                android:showAsAction="never"
                android:title="@string/contactus"/>
            <item
                android:id="@+id/logout"
                android:orderInCategory="0"
                android:showAsAction="never"
                android:title="@string/signout"/>
        </menu>
    </item>

</menu>