<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
      android:id="@+id/layoutt"
    android:layout_height="fill_parent"
  android:background = "@drawable/loginbg"
   
    android:orientation="vertical" >
<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="100dp"
     android:gravity="center_vertical|center_horizontal|center"
     android:orientation="vertical" >

      <ImageView
          android:id="@+id/avatar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:scaleType="fitStart"
          android:src="@drawable/deemgpsicon" />

 </LinearLayout>
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="20dp"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical"
    android:paddingRight="20dp" >

      <ImageView
          android:id="@+id/avatar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingLeft="20dp"
          android:scaleType="fitStart"
          android:src="@drawable/contacticon" />

 </LinearLayout>

 </LinearLayout>
<View
    android:layout_width="wrap_content"
    android:layout_height="15dp" >

</View>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/listbg"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

<EditText
    android:id="@+id/e1"
    style="@style/customcontact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_edittext"
    android:ems="10"
    android:hint="@string/firstname"
    android:padding="5dp"
    android:singleLine="true" />
<View
    android:layout_width="5dp"
    android:layout_height="1dp" >

</View>
    <EditText
        android:id="@+id/e2"
        style="@style/customcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/lastname"
        android:lines="1"
        android:maxLines="1"
        android:padding="5dp"
        android:singleLine="true" />
<View
    android:layout_width="5dp"
    android:layout_height="1dp" >

</View>
    <EditText
        android:id="@+id/e3"
        style="@style/customcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1"
        android:padding="5dp"
        android:singleLine="true" />
<View
    android:layout_width="5dp"
    android:layout_height="1dp" >

</View>
    <EditText
        android:id="@+id/e4"
        style="@style/customcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/orgname"
        android:lines="1"
        android:maxLines="1"
        android:padding="5dip"
        android:singleLine="true" />
<View
    android:layout_width="5dp"
    android:layout_height="1dp" >

</View>
    <EditText
        android:id="@+id/e5"
        style="@style/customcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/mobnumb"
        android:inputType="phone"
        android:lines="1"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="5dip"
        android:singleLine="true" />
<View
    android:layout_width="5dp"
    android:layout_height="1dp" >

</View>
    <EditText
        android:id="@+id/e6"
        style="@style/customcontact"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/addrs"
        android:maxLines="5"
        android:padding="5dip"
        />
<View
    android:layout_width="5dp"
    android:layout_height="1dp" >

</View>
    <EditText
        android:id="@+id/e8"
        style="@style/customcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/city"
        android:lines="1"
        android:maxLines="1"
        android:padding="5dip"
        android:singleLine="true" />
<View
    android:layout_width="5dp"
    android:layout_height="1dp" >

</View>
    <EditText
        android:id="@+id/e9"
        style="@style/customcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/state"
        android:lines="1"
        android:maxLines="1"
        android:padding="5dip"
        android:singleLine="true" />
    <View
    android:layout_width="wrap_content"
    android:layout_height="15dp" >

</View>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >
   <Button
            android:id="@+id/btn2"
            android:layout_width="100dp"
            android:layout_height="25dp"
           
            
            android:background="@drawable/sendbutnormal" />

<View
    android:layout_width="10dp"
    android:layout_height="1dp" >

</View>

    <Button
            android:id="@+id/btn3"
            android:layout_width="100dp"
            android:layout_height="25dp"
           
           
            android:background="@drawable/clearmessagebutnormal" />
   </LinearLayout>
      

     
    

</LinearLayout>
</LinearLayout>